feat: add new functionality

--- a/translations/be.json
+++ b/translations/be.json
@@ -1,68 +1,176 @@
 {
-  "dishesList": {
-    "borsch": {
-      "name": "Боршч",
-      "description": "Традыцыйны ўкраінскі суп з буракоў з багатым смакам і яркім колерам."
-    },
-    "plov": {
-      "name": "Плоў",
-      "description": "Центральнаазіяцкая рысавая страва з няжнай мясам і духмянымі спецыямі."
-    },
-    "olivier": {
-      "name": "Салат Аліўе",
-      "description": "Класічны рускі салат з бульбы, гародніны, яек і маянэзу."
-    },
-    "pasta": {
-      "name": "Паста Карбанара",
-      "description": "Класічная італьянская паста з яйкамі, сырам і панчэтай."
-    },
-    "caesar": {
-      "name": "Салат Цэзар",
-      "description": "Свежая салата-латук з крэмавым запраўкай і хрусткімі сухарыкамі."
-    },
-    "puree": {
-      "name": "Гародніннае пюрэ",
-      "description": "Няжнае і крэмавае гародніннае пюрэ з травамі і спецыямі."
-    },
-    "chicken_potato": {
-      "name": "Курыца з бульбай",
-      "description": "Няжная курыная грудка з запечанай бульбай і травамі."
-    },
-    "buckwheat_veggies": {
-      "name": "Грэчка з гароднінай",
-      "description": "Пажыўная грэчка з падсмажанай гароднінай і духмянымі спецыямі."
-    }
-  },
-  "ingredients": {
-    "beet": "Бурак",
-    "cabbage": "Капуста",
-    "potato": "Бульба",
-    "carrot": "Маркоўка",
-    "onion": "Цыбуля",
-    "meat": "Мяса",
-    "tomato_paste": "Таматная паста",
-    "rice": "Рыс",
-    "garlic": "Часнок",
-    "spices": "Спецыі",
-    "eggs": "Яйкі",
-    "peas": "Гарох",
-    "sausage": "Кілбаса",
-    "cucumber": "Агурок",
-    "mayonnaise": "Маянэз",
-    "tomato_sauce": "Таматны соус",
-    "cheese": "Сыр",
-    "basil": "Базілік",
-    "chicken": "Курыца",
-    "lettuce": "Салата-латук",
-    "croutons": "Сухарыкі",
-    "parmesan": "Пармезан",
-    "caesar_sauce": "Запраўка Цэзар",
-    "vegetables": "Гародніна",
-    "cream": "Вяршкі",
-    "salt": "Соль",
-    "pepper": "Перац",
-    "oil": "Алей",
-    "buckwheat": "Грэчка",
-    "bell_pepper": "Болгарскі перац"
-  }
+	"dishesList": {
+		"borsch": {
+			"name": "Боршч",
+			"description": "Традыцыйны ўкраінскі суп з буракоў і мяса.",
+			"recipe": [
+				"Зварыце мяса да гатоўнасці, дастаньце і нарэжце.",
+				"У булён дадайце нарэзаную бульбу, варыце 10 хвілін.",
+				"Дадайце нашаткаваную капусту, варыце яшчэ 5 хвілін.",
+				"Падсмажце бурак з морквай і цыбуляй, дадайце таматную пасту.",
+				"Выкладзіце зажарку ў суп, варыце 10 хвілін.",
+				"Дадайце мяса, пасоліце, паперчыце, давядзіце да гатоўнасці."
+			]
+		},
+		"plov": {
+			"name": "Плоў",
+			"description": "Цэнтральнаазіяцкая страва з рысу, мяса і спецый.",
+			"recipe": [
+				"Прамыйце рыс.",
+				"Падсмажце кавалкі мяса да залацістага колеру.",
+				"Дадайце нарэзаную цыбулю і моркву, падсмажце.",
+				"Дадайце рыс, часнок і спецыі.",
+				"Заліце вадой, накрыйце і тушце да гатоўнасці рысу."
+			]
+		},
+		"olivier": {
+			"name": "Салат Аліўе",
+			"description": "Класічны рускі салат з бульбы, гародніны, яек і маянэзу."
+		},
+		"pasta": {
+			"name": "Паста Карбанара",
+			"description": "Класічная італьянская паста з яйкамі, сырам і панчэтай."
+		},
+		"caesar": {
+			"name": "Салат Цэзар",
+			"description": "Свежая салата-латук з крэмавым запраўкай і хрусткімі сухарыкамі."
+		},
+		"puree": {
+			"name": "Гародніннае пюрэ",
+			"description": "Няжнае і крэмавае гародніннае пюрэ з травамі і спецыямі."
+		},
+		"chicken_potato": {
+			"name": "Курыца з бульбай",
+			"description": "Няжная курыная грудка з запечанай бульбай і травамі."
+		},
+		"buckwheat_veggies": {
+			"name": "Грэчка з гароднінай",
+			"description": "Пажыўная грэчка з падсмажанай гароднінай і духмянымі спецыямі."
+		},
+		"sushi": { "name": "Сушы", "description": "Традыцыйная японская страва з рысу, рыбы і гародніны." },
+		"ratatouille": {
+			"name": "Рататуй",
+			"description": "Французская гароднінная запяканка з баклажанаў, цукіні і памідораў."
+		},
+		"tacos": { "name": "Такос", "description": "Мексіканская страва з тортыльяй, мясам і гароднінай." },
+		"paella": { "name": "Паэлья", "description": "Іспанская страва з рысу, морапрадуктаў і гародніны." },
+		"tom_yum": { "name": "Том Ям", "description": "Пікантны тайскі суп з крэветкамі і лімонам." },
+		"falafel": { "name": "Фалафель", "description": "Блізкаўсходнія шарыкі з нута і зеляніны." },
+		"ramen": { "name": "Рамен", "description": "Японскі суп з локшынай, мясам і яйкам." },
+		"moussaka": { "name": "Мусака", "description": "Грэчаская запяканка з баклажанаў, бульбы і мяснога фаршу." },
+		"chili_con_carne": {
+			"name": "Чылі кон карнэ",
+			"description": "Мексіканская страва з мяса, фасолі і вострага перцу."
+		},
+		"croissant": { "name": "Круасан", "description": "Французская выпечка з пластовага цеста." },
+		"goulash": { "name": "Гуляш", "description": "Венгерская страва з мяса і гародніны з папрыкай." },
+		"kimchi": { "name": "Кімчы", "description": "Карэйская квашаная капуста з вострымі спецыямі." },
+		"samosa": { "name": "Самоса", "description": "Індыйскія піражкі з бульбай і гароднінай." },
+		"cheeseburger": { "name": "Чызбургер", "description": "Амерыканскі бургер з мясам і сырам." },
+		"caesar_salad": { "name": "Салата Цэзара", "description": "Салата з курыцай, крутонамі і соусам Цэзара." },
+		"draniki": { "name": "Дранікі", "description": "Беларускія бліны з бульбы." },
+		"pizza_margherita": {
+			"name": "Піца Маргарыта",
+			"description": "Італьянская піца з памідорамі, мацарэлай і базілікам."
+		},
+		"pelmeni": { "name": "Пельмені", "description": "Расійскія клёцкі з мясам." },
+		"draniki_meat": { "name": "Дранікі з мясам", "description": "Дранікі з даданнем мяснога фаршу." },
+		"shashlik": { "name": "Шашлык", "description": "Кавалкі мяса, смажаныя на вогнішчы." }
+	},
+	"ingredients": {
+		"beet": "Бурак",
+		"cabbage": "Капуста",
+		"potato": "Бульба",
+		"carrot": "Маркоўка",
+		"onion": "Цыбуля",
+		"meat": "Мяса",
+		"tomato_paste": "Таматная паста",
+		"rice": "Рыс",
+		"garlic": "Часнок",
+		"spices": "Спецыі",
+		"eggs": "Яйкі",
+		"sausage": "Кілбаса",
+		"cucumber": "Агурок",
+		"mayonnaise": "Маянэз",
+		"tomato_sauce": "Таматны соус",
+		"cheese": "Сыр",
+		"basil": "Базілік",
+		"chicken": "Курыца",
+		"lettuce": "Салата-латук",
+		"croutons": "Сухарыкі",
+		"parmesan": "Пармезан",
+		"caesar_sauce": "Запраўка Цэзар",
+		"vegetables": "Гародніна",
+		"cream": "Вяршкі",
+		"salt": "Соль",
+		"pepper": "Перац",
+		"oil": "Алей",
+		"buckwheat": "Грэчка",
+		"bell_pepper": "Болгарскі перац",
+		"nori": "Норы",
+		"salmon": "Ласось",
+		"avocado": "Авакада",
+		"soy_sauce": "Соевы соус",
+		"eggplant": "Баклажан",
+		"zucchini": "Цукіні",
+		"tortilla": "Тортылья",
+		"beef": "Ялавічына",
+		"salsa": "Сальса",
+		"seafood": "Морапрадукты",
+		"peas": "Гарох",
+		"saffron": "Шафран",
+		"shrimp": "Крэветкі",
+		"lemongrass": "Лімонная трава",
+		"lime": "Лайм",
+		"mushroom": "Грыб",
+		"chili": "Востры перац",
+		"coconut_milk": "Какасовы малако",
+		"chickpeas": "Нут",
+		"parsley": "Пятрушка",
+		"flour": "Мука",
+		"noodles": "Локшына",
+		"pork": "Свініна",
+		"green_onion": "Зялёны лук",
+		"bechamel": "Бешамель",
+		"butter": "Масла",
+		"yeast": "Дрожжы",
+		"milk": "Малако",
+		"sugar": "Цукар",
+		"radish": "Рэдзька",
+		"ginger": "Імбір",
+		"bun": "Булка",
+		"mozzarella": "Моцарэла",
+		"olive_oil": "Аліўкавы алей",
+		"vinegar": "Воцат"
+	},
+	"units": {
+		"г": "г",
+		"кг": "кг",
+		"мл": "мл",
+		"л": "л",
+		"ст.л.": "ст.л.",
+		"ч.л.": "ч.л.",
+		"по вкусу": "па смаку",
+		"зубчик": "зубчык",
+		"шт.": "шт.",
+		"пакетик": "пакетык",
+		"кусочек": "кавалак",
+		"ломтик": "ломтык",
+		"пучок": "пучок",
+		"стакан": "шклянка",
+		"банка": "слоік",
+		"веточка": "галінка",
+		"щепотка": "шчэпка",
+		"порция": "порцыя",
+		"1 зубчик": "1 зубчык",
+		"2 зубчика": "2 зубчыкі",
+		"1 шт.": "1 шт.",
+		"1 пакетик": "1 пакетык",
+		"1 пучок": "1 пучок",
+		"1 стакан": "1 шклянка",
+		"1 банка": "1 слоік",
+		"1 веточка": "1 галінка",
+		"1 щепотка": "1 шчэпка",
+		"1 порция": "1 порцыя"
+	}
 }
